# Bcut

./: 9_build_standalone.bat  About.md  app.bat  build_mvcn.bat  build_one.bat  cspell.config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: blank.yml  mac_build.yml  python-app.yml  windows_build.yml
.qodo/: history.sqlite
app/views/: style.css
docs/: index.html
locales/zh_TW/LC_MESSAGES/: bcut.po
main_tui.dist_1/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _ssl.pyd  _uuid.pyd  _wmi.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd
src/: LICENSE.txt  __init__.py  main_converter.py  main_test.py  main_tui.py  main_upload.py  tui.py
src/app/: __init__.py
src/app/actions/: __init__.py
src/app/actions/mideo_converter/: mideo_converter.py
src/app/common/: __init__.py  constants.py
src/app/common/logger/: config.py  logger_module.py
src/app/config/: app_config.py
src/app/models/: tasks.py
src/app/services/: __init__.py
src/app/services/ffmpeg_converter/: __init__.py  ffmpeg_converter.py  ffmpeg_converter_t.py  ffmpeg_converter_with_module.py
src/app/utils/: __init__.py
src/app/utils/common_module/: __init__.py
src/app/utils/composer/: composer.py
src/app/utils/logger/: __init__.py  logger_module.py
src/app/views/: __init__.py  i18n.py  m2.py  main.py  refresh01.tcss  s.css  src.py  style.css  widgets.py
src/tests/: test.py
src/tests/t1/: __init__.py  t2.py  t3.py
tests/: test.py
tests/t1/: __init__.py  t2.py
(+3 files in other folders)
