[project]
name = "BCut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
    "nuitka>=2.4.8",
    "textual>=0.83.0",
    "textual-fspicker>=0.0.11",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "mypy>=1.14.1",
    "nuitka>=2.4.8",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-textual-snapshot>=1.0.0",
    "textual-dev>=1.6.1",
]
